--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@supabase/supabase-js": "^2.49.4",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
