--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^1.9.0",
     "@emailjs/browser": "^4.4.1",
     "@supabase/supabase-js": "^2.49.4",
     "framer-motion": "^12.7.4",
