--- a/package.json
+++ b/package.json
@@ -10,26 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@auth/supabase-adapter": "^1.9.0",
+    "@auth/supabase-adapter": "^1.10.0",
     "@emailjs/browser": "^4.4.1",
-    "@supabase/supabase-js": "^2.49.4",
-    "framer-motion": "^12.7.4",
-    "lucide-react": "^0.503.0",
-    "react": "^19.0.0",
+    "@studio-freight/lenis": "^1.0.42",
+    "@supabase/supabase-js": "^2.57.4",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.543.0",
+    "react": "^19.1.1",
     "react-circular-progressbar": "^2.2.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.1"
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.22.0",
+    "@eslint/js": "^9.35.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.2",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "vite": "^6.3.1"
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
+    "vite": "^7.1.5"
   }
 }
